force-app/main/default/objects/Doctor__c/fields/Doctor_Availability__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Availability__c</fullName>
    <formula>if(TIMENOW() &gt; Shift_Start__c &amp;&amp; TIMENOW() &lt; Shift_End__c,True,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doctor Availability</label>
    <type>Checkbox</type>
</CustomField>