force-app/main/default/objects/Doctor__c/fields/Doctor_Email__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Email__c</fullName>
    <label>Doctor Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>