force-app/main/default/objects/Doctor__c/fields/Doctor_Name__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Name__c</fullName>
    <label>Doctor Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>