force-app/main/default/objects/Doctor__c/fields/Dr_Phone__c.field-meta.xml
<CustomField>
    <fullName>Dr_Phone__c</fullName>
    <label>Dr Phone</label>
    <type>Phone</type>
</CustomField>