force-app/main/default/objects/Doctor__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <label>Qualification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MBBS</fullName>
                <default>true</default>
                <label>MBBS</label>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>FRCS</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>BMBS</fullName>
            </value>
            <value>
                <fullName>DNB</fullName>
            </value>
            <value>
                <fullName>MCh</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>MRCS</fullName>
            </value>
            <value>
                <fullName>FRCP</fullName>
            </value>
            <value>
                <fullName>MRCOG</fullName>
            </value>
            <value>
                <fullName>FRCOG</fullName>
            </value>
            <value>
                <fullName>PhD</fullName>
            </value>
            <value>
                <fullName>MPH</fullName>
            </value>
            <value>
                <fullName>MHA</fullName>
            </value>
            <value>
                <fullName>PGDCC</fullName>
            </value>
            <value>
                <fullName>FCPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>