force-app/main/default/objects/Doctor__c/fields/Shift_End__c.field-meta.xml
<CustomField>
    <fullName>Shift_End__c</fullName>
    <label>Shift End</label>
    <type>Time</type>
</CustomField>