force-app/main/default/objects/Doctor__c/fields/Shift_Start__c.field-meta.xml
<CustomField>
    <fullName>Shift_Start__c</fullName>
    <label>Shift Start</label>
    <type>Time</type>
</CustomField>