force-app/main/default/objects/Doctor__c/fields/specialization__c.field-meta.xml
<CustomField>
    <fullName>specialization__c</fullName>
    <label>specialization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cardiologist</fullName>
            </value>
            <value>
                <fullName>Gastroenterologist</fullName>
            </value>
            <value>
                <fullName>Oncologist</fullName>
            </value>
            <value>
                <fullName>Dermatologist</fullName>
            </value>
            <value>
                <fullName>Neurologist</fullName>
            </value>
            <value>
                <fullName>Immunology</fullName>
            </value>
            <value>
                <fullName>Obstetrics and gynaecology</fullName>
            </value>
            <value>
                <fullName>Family medicine</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Psychiatry</fullName>
            </value>
            <value>
                <fullName>Endocrinologist</fullName>
            </value>
            <value>
                <fullName>Geriatrics</fullName>
            </value>
            <value>
                <fullName>Hematology</fullName>
            </value>
            <value>
                <fullName>Infectious disease physician</fullName>
            </value>
            <value>
                <fullName>Anesthesiology</fullName>
            </value>
            <value>
                <fullName>Emergency medicine</fullName>
            </value>
            <value>
                <fullName>Ophthalmologist</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Colorectal surgery</fullName>
            </value>
            <value>
                <fullName>Hospice and palliative medicine</fullName>
            </value>
            <value>
                <fullName>Internal medicine</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Orthopedics</fullName>
            </value>
            <value>
                <fullName>Otolaryngologist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>