force-app/main/default/objects/Doctor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Doctor_Email__c</columns>
    <columns>Doctor_Name__c</columns>
    <columns>Qualification__c</columns>
    <columns>Shift_Start__c</columns>
    <columns>Shift_End__c</columns>
    <columns>Doctor_Availability__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>